--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -6,7 +6,8 @@
 
 .eachFood {
   border: 1px solid red;
-  flex-basis: 30%;
+  flex-basis: 25%;
   margin: 10px;
   min-width: 200px;
+  padding: 10px;
 }
